tests/baselines/reference/AnnotationDeclarationNegative24.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative24.ets(1,2): error TS28037: In annotation declaration any symbols between '@' and 'interface' are forbidden.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative24.ets (1 errors) ====
    @ interface Anno {}
     ~
!!! error TS28037: In annotation declaration any symbols between '@' and 'interface' are forbidden.